--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   text-align: center;
   font-family: Inter;
+  flex-wrap: wrap;
 
   .addHome {
     padding: 10px;
@@ -25,6 +26,8 @@
 
   .books {
     display: flex;
+    flex-wrap: wrap;
+
 
     .book {
       flex: 1;
